# Faraday-Software

./: .gitignore  .travis.yml  CONTRIBUTING.md  LICENSE.md  README  README.md  presubmit.sh  requirements.txt  setup.cfg  setup.py
.github/: ISSUE_TEMPLATE.md
Applications/APRS/: aprs.ini  aprs.py  aprs.sample.ini  login-template.ini  login.ini  readme.md
Applications/Data/: README.md  data.py  packet.py
Applications/Hermes/: Hermes_Flask_RX_Example.py  Readme.md  arq.py  arqtest-rx-hermesflask.py  arqtest-rx-threaded.py  arqtest-threaded.py  arqtest-tx-hermesflask.py  arqtest-tx_rx-threaded.py  arqtest.py  hermes.sample.ini  hermes_application_example.py  hermes_application_example_flask_rx.py  hermes_application_example_rx.py  hermes_application_example_tx.py  hermesflask.py  hermesflaskexample_rx.py  hermesflaskexample_tx.py  hermesflaskrxexample.py  hermesflaskserver.py  hermesflasktxexample.py  hermesmessage.py  hermesobject.py  rx_flask.py  timer.py
Applications/RFDataport/: Packets.xlsx  README.md  rfdataport.sample.ini  rfdataport_server.py
Applications/SimpleUI/: gruntfile.js  loggingConfig.ini  package.json  readme.md  simpleui.ini  simpleui.py  simpleui.sample.ini
Applications/Telemetry/: __init__.py  db.sql  readme.md  telemetry.ini  telemetry.py
Applications/deviceconfiguration/: deviceconfiguration.ini  deviceconfiguration.py  deviceconfiguration.sample.ini  faraday_config.ini  faraday_config.sample.ini  getconfig.py  readconfig.py  simpleconfig.py
Applications/simplemessage/: A_Test_Rx.py  B_Test_Tx_User_Input.py  README.md  msg.py
Applications/simpleui/: loggingConfig.ini  telem.py
Debug/: Proxy_DEBUG_RX.py
Device_Test/: Device_Test.py  HARDRESETCONFIG.py  Readme.md  TEST-ADC.py  TEST-DIGITAL_OUT.py  TEST-FLASH_DEBUG.py  TEST-GET-CONFIG.py  TEST-MOSFET.py  TEST-RF_DUT_TX.py  TEST-TEMP.py  TEST-UART_ECHO.py  TEST-VCC.py  Test.py  Tutorial_Device_Configuration.py  devicetest.py  proxy_settings.py
FaradayBSL/: faradaybsl.py
Faraday_Proxy_Tools/FaradayIO/: Checksum.py  Telemetry_Parser.py  cc430radioconfig.py  commandmodule.py  deviceconfig.py  faradaybasicproxyio.py  faradaycommands.py  gpioallocations.py  telemetryparser.py
Firmware_Bootstrap_Loader/: Auto_Upload.py  FaradayFirmwareUpgradeScript.txt  Faraday_D1_Release.txt  README.md  faradaybsl.bat  test.py
Firmware_Bootstrap_Loader/BSL_Files/: Create_TI-TXT_Parse.py  FaradayFirmwareUpgradeScript.txt  faradaybsl.py
Firmware_Bootstrap_Loader/Firmware/: Faraday_D1_Release.txt
Firmware_Bootstrap_Loader/TI_CRC_Calculation/: TI-TXT_Parse.py  msp430bsl_chksm_test.html
Firmware_Bootstrap_Loader/bsl-scripter-windows/: 1-12-17_GPIO.txt  Auto_Upload.py  Create_TI-TXT_Parse.py  FaradayFirmwareUpgradeScript.txt  Faraday_BSL_FTDI_CBUS.py  Faraday_REVD1_Bringup.txt  Program_CRC_Calculations.txt  REV-D1_GPS-Test-1-10-17.txt  REV-D1_GPS-Test-1-11-17.txt  REVD1_LEDS_ON.txt  RF_Test_Firmware_1-17-17.txt
Firmware_Bootstrap_Loader/faradaybsl/: FaradayFirmwareUpgradeScript.txt  Program_CRC_Calculations.txt  createtiscripter.py  faradaybsl.py  faradayftdi.py  pass32_wrong.txt
Proxy/: __init__.py  db.sql  loggingConfig.ini  proxy.py  proxy.sample.ini  proxyapp.py  readme.md
Proxy/examplelogs/: 2017-04-20-01.db
Proxy/faraday_uart_stack/: layer_2_protocol.py  layer_2_service.py  layer_4_protocol.py  layer_4_service.py  loggingConfig.ini
Tutorials/: Readme.md
Tutorials/Getting_Started/: 0_Getting_Started.md  1_Faraday_Proxy_Server.md  2_Base_App-Messaging.md  3_Base_App-Telemetry-Command.md  4_File_Transfer.md  5_APRS-IS_Interconnect.md  6_Base_App-GUI.md  APRS-IS_Interconnect.md  Base_App-Telemetry-Command.md  File_Transfer.md  Getting_Started.md
Tutorials/Python_Developer_Tutorials/: Readme.md
Tutorials/start/: Readme.md  configuring-faraday.md  configuring-proxy.md  configuring-rf-faraday.md  connecting-hardware.md  hello-world.md  hello-world.py  installing-software.md  rfplayground.md  telemetrystart.md
aprs/: Test.py  aprs.ini  aprs.py  loggingConfig.ini  login-template.ini  readme.md
device-configuration/: README.md  device-configuration.py  faraday_config.ini
deviceconfiguration/: faraday_config.ini  loggingConfig.ini
docs/: Makefile  aprs-is.rst  commandmodule.rst  conf.py  data.rst  faradaycommands.rst  faradayio.rst  getting-started.rst  index.rst  installation.rst  make.bat  messaging.rst  proxy-api.rst  proxy.rst  telemetry.rst  telemetryparser.rst  toolsets-faradayio.rst  tutorial_faradayio_0.rst  tutorial_faradayio_1.rst  tutorial_faradayio_2.rst  tutorial_faradayio_3.rst  userinterface.rst
etc/faraday/: aprs.sample.ini  bsl.sample.ini  data.ini  data.sample.ini  deviceconfiguration.sample.ini  faradayFirmwareUpgradeScript.txt  faraday_config.sample.ini  loggingConfig.ini  programCRCCalculations.txt  proxy.sample.ini  simpleui.sample.ini  telemetry.sample.ini  telemetrydb.sql
faraday/: aprs.py  bootstrap.py  configure.py  data.py  deviceconfiguration.py  hermesflaskserver.py  proxy.py  simpleconfig.py  simpleui.py  telemetry.py
faraday/classes/: createtiscript.py  faradayFTDI.py  helper.py
faraday/proxy/: proxy.py
proxy/: loggingConfig.ini  proxy-template.ini  proxy.ini  proxy.py  proxy.sample.ini  readme.md
simple_scripts/: faraday-start.py  faraday_program.py  faraday_start.py  program_unit.py  readme.md
telemetry/: db.sql  loggingConfig.ini  readme.md  telemetry.ini  telemetry.py  telemetryOLD.db
(+322 files in other folders)
