[tool:pytest]
addopts = --flake8
flake8-ignore = E262 E265 E266 E402 E501

[metadata]
name = faraday
author = FaradayRF
author-email = Support@FaradayRF.com
summary = FaradayRF amateur radio open source software
description-file = README
home-page = https://github.com/FaradayRF/Faraday-Software
license = GPLv3
version = 0.0.1001
classifier =
    "Development Status :: 2 - Pre-Alpha"
    "Framework :: Flask"
    "Framework :: Pytest"
    "Framework :: Flake8"
    "Intended Audience :: Developers"
    "Intended Audience :: Education"
    "Intended Audience :: Science/Research"
    "Natural Language :: English"
    "Operating System :: MacOS :: MacOS X"
    "Operating System :: Microsoft :: Windows"
    "Operating System :: POSIX :: Linux"
    "Programming Language :: Python"
    "Programming Language :: JavaScript"
    "Topic :: Scientific/Engineering"
    "Topic :: Communications :: Ham Radio"
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"

keywords =
    faraday
    radio
    faradayrf
    ham
    amateur

[files]
packages =
    faraday
data_files =
    Proxy/examplelogs/ = Proxy/examplelogs/*
    Proxy =
        Proxy/db.sql
        Proxy/loggingConfig.ini
        Proxy/proxy.sample.ini
    Applications/Telemetry =
        Applications/Telemetry/db.sql
        Applications/Telemetry/loggingConfig.ini
        Applications/Telemetry/telemetry.sample.ini
    Applications/SimpleUI/static = Applications/SimpleUI/static/*
    Applications/SimpleUI/templates = Applications/SimpleUI/templates/*
    Applications/SimpleUI =
        Applications/SimpleUI/loggingConfig.ini
        Applications/SimpleUI/simpleui.sample.ini
    Applications/APRS =
        Applications/APRS/aprs.sample.ini
        Applications/APRS/loggingConfig.ini

[entry_points]
console_scripts =
    faraday-proxy = faraday.proxy:main
    faraday-telemetry = faraday.telemetry:main
    faraday-aprs = faraday.aprs:main
    faraday-simpleui = faraday.simpleui:main
